// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers - Past Weather Column with isLoading should render without crashing 1`] = `
<div
  className="field has-addons has-addons-centered"
>
  <div
    className="control has-icons-left"
  >
    <input
      className="input is-rounded"
      disabled={true}
      name="search"
      onChange={[Function]}
      placeholder="Zip code"
      type="text"
      value=""
    />
    <span
      className="icon is-left"
    >
      <i
        className="fas fa-globe"
      />
    </span>
  </div>
  <div
    className="control"
  >
    <button
      className="button is-info is-loading"
      onClick={[MockFunction]}
    >
      Search
    </button>
  </div>
</div>
`;

exports[`Containers - Past Weather Column without isLoading should render without crashing 1`] = `
<div
  className="field has-addons has-addons-centered"
>
  <div
    className="control has-icons-left"
  >
    <input
      className="input is-rounded"
      disabled={false}
      name="search"
      onChange={[Function]}
      placeholder="Zip code"
      type="text"
      value=""
    />
    <span
      className="icon is-left"
    >
      <i
        className="fas fa-globe"
      />
    </span>
  </div>
  <div
    className="control"
  >
    <button
      className="button is-info "
      onClick={[MockFunction]}
    >
      Search
    </button>
  </div>
</div>
`;

exports[`Containers - Past Weather Column without isLoading should trigger button correctly 1`] = `
<div
  className="field has-addons has-addons-centered"
>
  <div
    className="control has-icons-left"
  >
    <input
      className="input is-rounded"
      disabled={false}
      name="search"
      onChange={[Function]}
      placeholder="Zip code"
      type="text"
      value=""
    />
    <span
      className="icon is-left"
    >
      <i
        className="fas fa-globe"
      />
    </span>
  </div>
  <div
    className="control"
  >
    <button
      className="button is-info "
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
    >
      Search
    </button>
  </div>
</div>
`;

exports[`Containers - Past Weather Column without isLoading should trigger input correctly 1`] = `
<div
  className="field has-addons has-addons-centered"
>
  <div
    className="control has-icons-left"
  >
    <input
      className="input is-rounded"
      disabled={false}
      name="search"
      onChange={[Function]}
      placeholder="Zip code"
      type="text"
      value=""
    />
    <span
      className="icon is-left"
    >
      <i
        className="fas fa-globe"
      />
    </span>
  </div>
  <div
    className="control"
  >
    <button
      className="button is-info "
      onClick={[MockFunction]}
    >
      Search
    </button>
  </div>
</div>
`;
